--- a/notebooks/recordings/3 - transcribe recordings.ipynb
+++ b/notebooks/recordings/3 - transcribe recordings.ipynb
@@ -19,15 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "5a5c8bb7-b155-4e46-bd24-f0bee9422a63",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-10T21:15:05.686621Z",
-     "iopub.status.busy": "2024-05-10T21:15:05.686321Z",
-     "iopub.status.idle": "2024-05-10T21:15:05.705412Z",
-     "shell.execute_reply": "2024-05-10T21:15:05.704177Z",
-     "shell.execute_reply.started": "2024-05-10T21:15:05.686595Z"
+     "iopub.execute_input": "2024-05-10T21:52:13.752508Z",
+     "iopub.status.busy": "2024-05-10T21:52:13.751817Z",
+     "iopub.status.idle": "2024-05-10T21:52:14.069664Z",
+     "shell.execute_reply": "2024-05-10T21:52:14.068705Z",
+     "shell.execute_reply.started": "2024-05-10T21:52:13.752470Z"
     },
     "tags": []
    },
@@ -233,15 +233,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "176457da-a7af-4861-9f67-6cc191c21151",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-10T21:39:30.521217Z",
-     "iopub.status.busy": "2024-05-10T21:39:30.520026Z",
-     "iopub.status.idle": "2024-05-10T21:39:57.905165Z",
-     "shell.execute_reply": "2024-05-10T21:39:57.904069Z",
-     "shell.execute_reply.started": "2024-05-10T21:39:30.521178Z"
+     "iopub.execute_input": "2024-05-10T21:52:23.358627Z",
+     "iopub.status.busy": "2024-05-10T21:52:23.358078Z",
+     "iopub.status.idle": "2024-05-10T21:52:45.485542Z",
+     "shell.execute_reply": "2024-05-10T21:52:45.484481Z",
+     "shell.execute_reply.started": "2024-05-10T21:52:23.358597Z"
     }
    },
    "outputs": [
@@ -251,6 +251,7 @@
      "text": [
       "found 0 requests to fetch\n",
       "0 transcriptions were retrieved\n",
+      "processing 498 transcriptions |██████████████████████████████████████████████████| 100.0% done.\n",
       "498 new transcriptions were processed, there are 498 txt and 498 doc transcriptions available\n"
      ]
     }
@@ -288,326 +289,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "7a973c44-2c9d-460d-8580-30a835d54745",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-05-10T21:40:03.279007Z",
-     "iopub.status.busy": "2024-05-10T21:40:03.278147Z",
-     "iopub.status.idle": "2024-05-10T21:40:03.319026Z",
-     "shell.execute_reply": "2024-05-10T21:40:03.317912Z",
-     "shell.execute_reply.started": "2024-05-10T21:40:03.278975Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>path</th>\n",
-       "      <th>file</th>\n",
-       "      <th>name</th>\n",
-       "      <th>kind</th>\n",
-       "      <th>date</th>\n",
-       "      <th>type</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>transcription_json</th>\n",
-       "      <th>transcription_txt</th>\n",
-       "      <th>transcription_doc</th>\n",
-       "      <th>transcription_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2022/Henryk 2022-05-26 Bajka o nowym samochodz...</td>\n",
-       "      <td>Henryk 2022-05-26 Bajka o nowym samochodziku.m4a</td>\n",
-       "      <td>Bajka o nowym samochodziku</td>\n",
-       "      <td>Henryk</td>\n",
-       "      <td>26/05/2022</td>\n",
-       "      <td>m4a</td>\n",
-       "      <td>466.688000</td>\n",
-       "      <td>Henryk 2022-05-26 Bajka o nowym samochodziku.json</td>\n",
-       "      <td>Henryk 2022-05-26 Bajka o nowym samochodziku.txt</td>\n",
-       "      <td>Henryk 2022-05-26 Bajka o nowym samochodziku.docx</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2022/Henryk 2022-05-27 Bajka o Eryku r1.m4a</td>\n",
-       "      <td>Henryk 2022-05-27 Bajka o Eryku r1.m4a</td>\n",
-       "      <td>Bajka o Eryku r1</td>\n",
-       "      <td>Henryk</td>\n",
-       "      <td>27/05/2022</td>\n",
-       "      <td>m4a</td>\n",
-       "      <td>546.154667</td>\n",
-       "      <td>Henryk 2022-05-27 Bajka o Eryku r1.json</td>\n",
-       "      <td>Henryk 2022-05-27 Bajka o Eryku r1.txt</td>\n",
-       "      <td>Henryk 2022-05-27 Bajka o Eryku r1.docx</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2022/Henryk 2022-05-28 Bajka o swince peppie i...</td>\n",
-       "      <td>Henryk 2022-05-28 Bajka o swince peppie i domu...</td>\n",
-       "      <td>Bajka o swince peppie i domu rebeki</td>\n",
-       "      <td>Henryk</td>\n",
-       "      <td>28/05/2022</td>\n",
-       "      <td>m4a</td>\n",
-       "      <td>387.264000</td>\n",
-       "      <td>Henryk 2022-05-28 Bajka o swince peppie i domu...</td>\n",
-       "      <td>Henryk 2022-05-28 Bajka o swince peppie i domu...</td>\n",
-       "      <td>Henryk 2022-05-28 Bajka o swince peppie i domu...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2022/Henryk 2022-05-30 Bajka o parku dinozauro...</td>\n",
-       "      <td>Henryk 2022-05-30 Bajka o parku dinozaurow.m4a</td>\n",
-       "      <td>Bajka o parku dinozaurow</td>\n",
-       "      <td>Henryk</td>\n",
-       "      <td>30/05/2022</td>\n",
-       "      <td>m4a</td>\n",
-       "      <td>511.658667</td>\n",
-       "      <td>Henryk 2022-05-30 Bajka o parku dinozaurow.json</td>\n",
-       "      <td>Henryk 2022-05-30 Bajka o parku dinozaurow.txt</td>\n",
-       "      <td>Henryk 2022-05-30 Bajka o parku dinozaurow.docx</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2022/Henryk 2022-05-31 Bajka o drużynie koszy...</td>\n",
-       "      <td>Henryk 2022-05-31 Bajka o drużynie koszykowki...</td>\n",
-       "      <td>Bajka o drużynie koszykowki</td>\n",
-       "      <td>Henryk</td>\n",
-       "      <td>31/05/2022</td>\n",
-       "      <td>m4a</td>\n",
-       "      <td>492.355918</td>\n",
-       "      <td>Henryk 2022-05-31 Bajka o drużynie koszykowki...</td>\n",
-       "      <td>Henryk 2022-05-31 Bajka o drużynie koszykowki...</td>\n",
-       "      <td>Henryk 2022-05-31 Bajka o drużynie koszykowki...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>493</th>\n",
-       "      <td>493</td>\n",
-       "      <td>Henryk 2024-04-26 Tatuś opowiada o zebraniu w...</td>\n",
-       "      <td>Henryk 2024-04-26 Tatuś opowiada o zebraniu w...</td>\n",
-       "      <td>Tatuś opowiada o zebraniu w żłobku a Kamptoz...</td>\n",
-       "      <td>Henryk</td>\n",
-       "      <td>26/04/2024</td>\n",
-       "      <td>m4a</td>\n",
-       "      <td>1106.730667</td>\n",
-       "      <td>Henryk 2024-04-26 Tatuś opowiada o zebraniu w...</td>\n",
-       "      <td>Henryk 2024-04-26 Tatuś opowiada o zebraniu w...</td>\n",
-       "      <td>Henryk 2024-04-26 Tatuś opowiada o zebraniu w...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>494</th>\n",
-       "      <td>494</td>\n",
-       "      <td>Henryk 2024-04-28 Tatuś opowiada o malowaniu ...</td>\n",
-       "      <td>Henryk 2024-04-28 Tatuś opowiada o malowaniu ...</td>\n",
-       "      <td>Tatuś opowiada o malowaniu krzesełek a Diplod...</td>\n",
-       "      <td>Henryk</td>\n",
-       "      <td>28/04/2024</td>\n",
-       "      <td>m4a</td>\n",
-       "      <td>1025.898667</td>\n",
-       "      <td>Henryk 2024-04-28 Tatuś opowiada o malowaniu ...</td>\n",
-       "      <td>Henryk 2024-04-28 Tatuś opowiada o malowaniu ...</td>\n",
-       "      <td>Henryk 2024-04-28 Tatuś opowiada o malowaniu ...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>495</th>\n",
-       "      <td>495</td>\n",
-       "      <td>Henryk 2024-04-29 Tata opowiada o konkursie i ...</td>\n",
-       "      <td>Henryk 2024-04-29 Tata opowiada o konkursie i ...</td>\n",
-       "      <td>Tata opowiada o konkursie i nagrodach a Gastor...</td>\n",
-       "      <td>Henryk</td>\n",
-       "      <td>29/04/2024</td>\n",
-       "      <td>m4a</td>\n",
-       "      <td>1078.997333</td>\n",
-       "      <td>Henryk 2024-04-29 Tata opowiada o konkursie i ...</td>\n",
-       "      <td>Henryk 2024-04-29 Tata opowiada o konkursie i ...</td>\n",
-       "      <td>Henryk 2024-04-29 Tata opowiada o konkursie i ...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>496</th>\n",
-       "      <td>496</td>\n",
-       "      <td>Henryk 2024-05-01 Tatuś opowiada o dniu pracy...</td>\n",
-       "      <td>Henryk 2024-05-01 Tatuś opowiada o dniu pracy...</td>\n",
-       "      <td>Tatuś opowiada o dniu pracy a Trąbiący dino...</td>\n",
-       "      <td>Henryk</td>\n",
-       "      <td>01/05/2024</td>\n",
-       "      <td>m4a</td>\n",
-       "      <td>1227.306667</td>\n",
-       "      <td>Henryk 2024-05-01 Tatuś opowiada o dniu pracy...</td>\n",
-       "      <td>Henryk 2024-05-01 Tatuś opowiada o dniu pracy...</td>\n",
-       "      <td>Henryk 2024-05-01 Tatuś opowiada o dniu pracy...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>497</th>\n",
-       "      <td>497</td>\n",
-       "      <td>Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...</td>\n",
-       "      <td>Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...</td>\n",
-       "      <td>Tatuś opowiada o Rycerzach i Zamkach a Prapłe...</td>\n",
-       "      <td>Henryk</td>\n",
-       "      <td>03/05/2024</td>\n",
-       "      <td>m4a</td>\n",
-       "      <td>1116.394667</td>\n",
-       "      <td>Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...</td>\n",
-       "      <td>Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...</td>\n",
-       "      <td>Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>498 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Unnamed: 0                                               path  \\\n",
-       "0             0  2022/Henryk 2022-05-26 Bajka o nowym samochodz...   \n",
-       "1             1        2022/Henryk 2022-05-27 Bajka o Eryku r1.m4a   \n",
-       "2             2  2022/Henryk 2022-05-28 Bajka o swince peppie i...   \n",
-       "3             3  2022/Henryk 2022-05-30 Bajka o parku dinozauro...   \n",
-       "4             4  2022/Henryk 2022-05-31 Bajka o drużynie koszy...   \n",
-       "..          ...                                                ...   \n",
-       "493         493  Henryk 2024-04-26 Tatuś opowiada o zebraniu w...   \n",
-       "494         494  Henryk 2024-04-28 Tatuś opowiada o malowaniu ...   \n",
-       "495         495  Henryk 2024-04-29 Tata opowiada o konkursie i ...   \n",
-       "496         496  Henryk 2024-05-01 Tatuś opowiada o dniu pracy...   \n",
-       "497         497  Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...   \n",
-       "\n",
-       "                                                  file  \\\n",
-       "0     Henryk 2022-05-26 Bajka o nowym samochodziku.m4a   \n",
-       "1               Henryk 2022-05-27 Bajka o Eryku r1.m4a   \n",
-       "2    Henryk 2022-05-28 Bajka o swince peppie i domu...   \n",
-       "3       Henryk 2022-05-30 Bajka o parku dinozaurow.m4a   \n",
-       "4    Henryk 2022-05-31 Bajka o drużynie koszykowki...   \n",
-       "..                                                 ...   \n",
-       "493  Henryk 2024-04-26 Tatuś opowiada o zebraniu w...   \n",
-       "494  Henryk 2024-04-28 Tatuś opowiada o malowaniu ...   \n",
-       "495  Henryk 2024-04-29 Tata opowiada o konkursie i ...   \n",
-       "496  Henryk 2024-05-01 Tatuś opowiada o dniu pracy...   \n",
-       "497  Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...   \n",
-       "\n",
-       "                                                  name    kind        date  \\\n",
-       "0                           Bajka o nowym samochodziku  Henryk  26/05/2022   \n",
-       "1                                     Bajka o Eryku r1  Henryk  27/05/2022   \n",
-       "2                  Bajka o swince peppie i domu rebeki  Henryk  28/05/2022   \n",
-       "3                             Bajka o parku dinozaurow  Henryk  30/05/2022   \n",
-       "4                         Bajka o drużynie koszykowki  Henryk  31/05/2022   \n",
-       "..                                                 ...     ...         ...   \n",
-       "493  Tatuś opowiada o zebraniu w żłobku a Kamptoz...  Henryk  26/04/2024   \n",
-       "494  Tatuś opowiada o malowaniu krzesełek a Diplod...  Henryk  28/04/2024   \n",
-       "495  Tata opowiada o konkursie i nagrodach a Gastor...  Henryk  29/04/2024   \n",
-       "496  Tatuś opowiada o dniu pracy a Trąbiący dino...  Henryk  01/05/2024   \n",
-       "497  Tatuś opowiada o Rycerzach i Zamkach a Prapłe...  Henryk  03/05/2024   \n",
-       "\n",
-       "    type     duration                                 transcription_json  \\\n",
-       "0    m4a   466.688000  Henryk 2022-05-26 Bajka o nowym samochodziku.json   \n",
-       "1    m4a   546.154667            Henryk 2022-05-27 Bajka o Eryku r1.json   \n",
-       "2    m4a   387.264000  Henryk 2022-05-28 Bajka o swince peppie i domu...   \n",
-       "3    m4a   511.658667    Henryk 2022-05-30 Bajka o parku dinozaurow.json   \n",
-       "4    m4a   492.355918  Henryk 2022-05-31 Bajka o drużynie koszykowki...   \n",
-       "..   ...          ...                                                ...   \n",
-       "493  m4a  1106.730667  Henryk 2024-04-26 Tatuś opowiada o zebraniu w...   \n",
-       "494  m4a  1025.898667  Henryk 2024-04-28 Tatuś opowiada o malowaniu ...   \n",
-       "495  m4a  1078.997333  Henryk 2024-04-29 Tata opowiada o konkursie i ...   \n",
-       "496  m4a  1227.306667  Henryk 2024-05-01 Tatuś opowiada o dniu pracy...   \n",
-       "497  m4a  1116.394667  Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...   \n",
-       "\n",
-       "                                     transcription_txt  \\\n",
-       "0     Henryk 2022-05-26 Bajka o nowym samochodziku.txt   \n",
-       "1               Henryk 2022-05-27 Bajka o Eryku r1.txt   \n",
-       "2    Henryk 2022-05-28 Bajka o swince peppie i domu...   \n",
-       "3       Henryk 2022-05-30 Bajka o parku dinozaurow.txt   \n",
-       "4    Henryk 2022-05-31 Bajka o drużynie koszykowki...   \n",
-       "..                                                 ...   \n",
-       "493  Henryk 2024-04-26 Tatuś opowiada o zebraniu w...   \n",
-       "494  Henryk 2024-04-28 Tatuś opowiada o malowaniu ...   \n",
-       "495  Henryk 2024-04-29 Tata opowiada o konkursie i ...   \n",
-       "496  Henryk 2024-05-01 Tatuś opowiada o dniu pracy...   \n",
-       "497  Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...   \n",
-       "\n",
-       "                                     transcription_doc transcription_id  \n",
-       "0    Henryk 2022-05-26 Bajka o nowym samochodziku.docx             None  \n",
-       "1              Henryk 2022-05-27 Bajka o Eryku r1.docx             None  \n",
-       "2    Henryk 2022-05-28 Bajka o swince peppie i domu...             None  \n",
-       "3      Henryk 2022-05-30 Bajka o parku dinozaurow.docx             None  \n",
-       "4    Henryk 2022-05-31 Bajka o drużynie koszykowki...             None  \n",
-       "..                                                 ...              ...  \n",
-       "493  Henryk 2024-04-26 Tatuś opowiada o zebraniu w...             None  \n",
-       "494  Henryk 2024-04-28 Tatuś opowiada o malowaniu ...             None  \n",
-       "495  Henryk 2024-04-29 Tata opowiada o konkursie i ...             None  \n",
-       "496  Henryk 2024-05-01 Tatuś opowiada o dniu pracy...             None  \n",
-       "497  Henryk 2024-05-03 Tatuś opowiada o Rycerzach ...             None  \n",
-       "\n",
-       "[498 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_transcriptions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "f2446222-fb6f-4d14-be7f-2500841239e5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-10T21:40:31.893140Z",
-     "iopub.status.busy": "2024-05-10T21:40:31.892773Z",
-     "iopub.status.idle": "2024-05-10T21:40:33.715618Z",
-     "shell.execute_reply": "2024-05-10T21:40:33.714274Z",
-     "shell.execute_reply.started": "2024-05-10T21:40:31.893110Z"
+     "iopub.execute_input": "2024-05-10T21:54:45.678141Z",
+     "iopub.status.busy": "2024-05-10T21:54:45.677140Z",
+     "iopub.status.idle": "2024-05-10T21:54:47.663029Z",
+     "shell.execute_reply": "2024-05-10T21:54:47.661906Z",
+     "shell.execute_reply.started": "2024-05-10T21:54:45.678111Z"
     }
    },
    "outputs": [
@@ -615,6 +305,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "verifying 498 transcriptions |██████████████████████████████████████████████████| 100.0% done.\n",
       "there are 498 processed and valid transcriptions\n",
       "\u001b[22m\u001b[49m\u001b[92m*** all 498 recordings were transcribed ***\u001b[0m\n"
      ]
@@ -622,7 +313,7 @@
    ],
    "source": [
     "# cleanup stale transcription ids - but work on a copy of the log\n",
-    "df_transcriptions_to_write = transcription.get_cleaned_up_transcriptions(\n",
+    "df_transcriptions_to_write = transcription.get_verified_transcriptions(\n",
     "    df=df_transcriptions, \n",
     "    path_transcriptions_json=DIR_TRANSCRIPTIONS_JSON, \n",
     "    path_transcriptions_txt=DIR_TRANSCRIPTIONS_TXT,\n",
@@ -632,6 +323,14 @@
     "# save transcription log\n",
     "df_transcriptions_to_write.to_csv(FILE_TRANSCRIPTION_CSV, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e769c7d0-622a-43d7-8482-ff9812700211",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
