added new transcriptions

--- a/notebooks/recordings/1 - Generate recordings stats.ipynb
+++ b/notebooks/recordings/1 - Generate recordings stats.ipynb
@@ -19,15 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "5daef15c-82f4-4e3e-b256-c0e53ab05ec5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:48:42.569160Z",
-     "iopub.status.busy": "2024-05-04T14:48:42.568501Z",
-     "iopub.status.idle": "2024-05-04T14:48:42.667899Z",
-     "shell.execute_reply": "2024-05-04T14:48:42.666681Z",
-     "shell.execute_reply.started": "2024-05-04T14:48:42.569133Z"
+     "iopub.execute_input": "2024-05-12T23:50:39.364540Z",
+     "iopub.status.busy": "2024-05-12T23:50:39.363849Z",
+     "iopub.status.idle": "2024-05-12T23:50:39.414405Z",
+     "shell.execute_reply": "2024-05-12T23:50:39.413762Z",
+     "shell.execute_reply.started": "2024-05-12T23:50:39.364519Z"
     },
     "tags": []
    },
@@ -39,15 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "30ab3234-8205-4a1e-9d64-0fe7f64a6288",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:48:42.672870Z",
-     "iopub.status.busy": "2024-05-04T14:48:42.672483Z",
-     "iopub.status.idle": "2024-05-04T14:48:44.296637Z",
-     "shell.execute_reply": "2024-05-04T14:48:44.295550Z",
-     "shell.execute_reply.started": "2024-05-04T14:48:42.672840Z"
+     "iopub.execute_input": "2024-05-12T23:50:40.372318Z",
+     "iopub.status.busy": "2024-05-12T23:50:40.372108Z",
+     "iopub.status.idle": "2024-05-12T23:50:40.401305Z",
+     "shell.execute_reply": "2024-05-12T23:50:40.400104Z",
+     "shell.execute_reply.started": "2024-05-12T23:50:40.372302Z"
     },
     "tags": []
    },
@@ -69,7 +69,8 @@
     "\n",
     "# local import\n",
     "from lib_henryk.logger import *\n",
-    "from lib_henryk.config import *"
+    "from lib_henryk.config import *\n",
+    "from lib_henryk.recordings import recordings"
    ]
   },
   {
@@ -82,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "b85b2e7d-266b-48b3-a9b5-b1d95615676c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:48:44.299521Z",
-     "iopub.status.busy": "2024-05-04T14:48:44.298794Z",
-     "iopub.status.idle": "2024-05-04T14:48:44.332807Z",
-     "shell.execute_reply": "2024-05-04T14:48:44.331644Z",
-     "shell.execute_reply.started": "2024-05-04T14:48:44.299494Z"
+     "iopub.execute_input": "2024-05-12T23:50:42.081994Z",
+     "iopub.status.busy": "2024-05-12T23:50:42.081488Z",
+     "iopub.status.idle": "2024-05-12T23:50:42.109312Z",
+     "shell.execute_reply": "2024-05-12T23:50:42.108375Z",
+     "shell.execute_reply.started": "2024-05-12T23:50:42.081975Z"
     }
    },
    "outputs": [
@@ -98,8 +99,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-04 14:48:44 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using csv file: ../../data/processed/henryk_audio_stats.csv\n",
-      "2024-05-04 14:48:44 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using audio files path: /mnt/onedrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\n"
+      "2024-05-12 23:50:42 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using csv file: ../../data/processed/henryk_audio_stats.csv\n",
+      "2024-05-12 23:50:42 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using audio files path: /mnt/onedrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\n"
      ]
     }
    ],
@@ -119,15 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "fe77121e-0291-4d6e-aca2-89c2c43e45aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:48:44.334293Z",
-     "iopub.status.busy": "2024-05-04T14:48:44.333965Z",
-     "iopub.status.idle": "2024-05-04T14:48:44.424597Z",
-     "shell.execute_reply": "2024-05-04T14:48:44.423638Z",
-     "shell.execute_reply.started": "2024-05-04T14:48:44.334272Z"
+     "iopub.execute_input": "2024-05-12T23:50:44.821383Z",
+     "iopub.status.busy": "2024-05-12T23:50:44.821078Z",
+     "iopub.status.idle": "2024-05-12T23:51:03.826062Z",
+     "shell.execute_reply": "2024-05-12T23:51:03.825538Z",
+     "shell.execute_reply.started": "2024-05-12T23:50:44.821359Z"
     }
    },
    "outputs": [
@@ -135,80 +136,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-04 14:48:44 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - retrieved 499 files\n"
+      "2024-05-12 23:50:45 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - retrieved 503 files\n",
+      "processing 503 audio files |██████████████████████████████████████████████████| 100.0% \n"
      ]
     }
    ],
    "source": [
     "# load patsh to all audio files from wiadomości do Henryczka\n",
-    "recordings_files = glob(f'{DIR_WIADOMOSCI_DO_HENRYCZKA}/**/*.m4a', recursive=True)\n",
-    "logger.info(f'retrieved {len(recordings_files)} files')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "7a368292-147f-4a64-adcb-ef9f941df02a",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-05-04T14:50:46.628282Z",
-     "iopub.status.busy": "2024-05-04T14:50:46.627345Z",
-     "iopub.status.idle": "2024-05-04T14:51:21.866992Z",
-     "shell.execute_reply": "2024-05-04T14:51:21.865507Z",
-     "shell.execute_reply.started": "2024-05-04T14:50:46.628244Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "processing 499 audio files |██████████████████████████████████████████████████| 100.0% \n"
-     ]
-    }
-   ],
-   "source": [
-    "def get_file_info(path: str) -> dict:\n",
-    "    \"\"\"\n",
-    "    get info from a file and process into a dictionary\n",
-    "    \"\"\"\n",
-    "\n",
-    "    _recording_info = {}\n",
-    "\n",
-    "    try:\n",
-    "        _info = mediainfo(path)\n",
-    "        _filename = os.path.basename(path)\n",
-    "        _filepath = path.replace(DIR_WIADOMOSCI_DO_HENRYCZKA + '/', '')\n",
-    "        _filename_regex_groups = re.search('^(.+) (\\d+-\\d+-\\d+) (.+)\\.(.+)$', _filename) # kind, date, name, extension\n",
-    "        _recording_kind = _filename_regex_groups[1]\n",
-    "        _recording_date = _filename_regex_groups[2]\n",
-    "        _recording_date = datetime.strptime(_recording_date, \"%Y-%m-%d\")\n",
-    "        _recording_name = _filename_regex_groups[3]\n",
-    "        _recording_type = _filename_regex_groups[4]\n",
-    "        _recording_duration = _info['duration']\n",
-    "    \n",
-    "        _recording_info = {\n",
-    "            'path': _filepath,\n",
-    "            'file': _filename,\n",
-    "            'name': _recording_name,\n",
-    "            'kind': _recording_kind,\n",
-    "            'date': _recording_date,\n",
-    "            'type': _recording_type,\n",
-    "            'duration': _recording_duration\n",
-    "        }\n",
-    "    except Exception as e:\n",
-    "        logger.warning(f'encountered error for {path}: {e}')\n",
-    "        return None\n",
-    "    \n",
-    "    return _recording_info\n",
-    "\n",
-    "# iterate over files and produce entries for the dataset\n",
-    "df = pd.DataFrame( {'path': [], 'file': [], 'name': [], 'kind': [], 'date': [], 'type': [], 'duration': []} )\n",
-    "for ix, i in enumerate(range(0,len(recordings_files))):\n",
-    "    printProgressBar(ix,len(recordings_files)-1, prefix=f'processing {len(recordings_files)} audio files')\n",
-    "    _row = get_file_info(recordings_files[i])\n",
-    "    if _row != None:\n",
-    "        df.loc[len(df)] = _row"
+    "df = recordings.get_recordings_info(path_recordings=DIR_WIADOMOSCI_DO_HENRYCZKA)"
    ]
   },
   {
@@ -221,15 +156,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "76b7c686-e201-4874-b0c1-8a74024605c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-04T14:51:23.847435Z",
-     "iopub.status.busy": "2024-05-04T14:51:23.846948Z",
-     "iopub.status.idle": "2024-05-04T14:51:23.900958Z",
-     "shell.execute_reply": "2024-05-04T14:51:23.899518Z",
-     "shell.execute_reply.started": "2024-05-04T14:51:23.847404Z"
+     "iopub.execute_input": "2024-05-12T23:51:58.427564Z",
+     "iopub.status.busy": "2024-05-12T23:51:58.427106Z",
+     "iopub.status.idle": "2024-05-12T23:51:58.472981Z",
+     "shell.execute_reply": "2024-05-12T23:51:58.472432Z",
+     "shell.execute_reply.started": "2024-05-12T23:51:58.427545Z"
     }
    },
    "outputs": [],
