--- a/notebooks/recordings/3 - transcribe recordings.ipynb
+++ b/notebooks/recordings/3 - transcribe recordings.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "# Transcribe Recordings\n",
+    "\n",
     "paid service [Goodtape](http://goodtape.io) will be used for the transcriptions"
    ]
   },
@@ -23,11 +24,11 @@
    "id": "5a5c8bb7-b155-4e46-bd24-f0bee9422a63",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-10T21:52:13.752508Z",
-     "iopub.status.busy": "2024-05-10T21:52:13.751817Z",
-     "iopub.status.idle": "2024-05-10T21:52:14.069664Z",
-     "shell.execute_reply": "2024-05-10T21:52:14.068705Z",
-     "shell.execute_reply.started": "2024-05-10T21:52:13.752470Z"
+     "iopub.execute_input": "2024-05-12T23:52:19.442203Z",
+     "iopub.status.busy": "2024-05-12T23:52:19.441854Z",
+     "iopub.status.idle": "2024-05-12T23:52:19.483024Z",
+     "shell.execute_reply": "2024-05-12T23:52:19.482498Z",
+     "shell.execute_reply.started": "2024-05-12T23:52:19.442182Z"
     },
     "tags": []
    },
@@ -39,15 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "7a299954-a131-4796-bad5-c9b53d0eb8cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-10T21:15:07.310681Z",
-     "iopub.status.busy": "2024-05-10T21:15:07.310254Z",
-     "iopub.status.idle": "2024-05-10T21:15:08.197213Z",
-     "shell.execute_reply": "2024-05-10T21:15:08.195845Z",
-     "shell.execute_reply.started": "2024-05-10T21:15:07.310641Z"
+     "iopub.execute_input": "2024-05-12T23:52:20.545917Z",
+     "iopub.status.busy": "2024-05-12T23:52:20.545578Z",
+     "iopub.status.idle": "2024-05-12T23:52:20.579893Z",
+     "shell.execute_reply": "2024-05-12T23:52:20.579085Z",
+     "shell.execute_reply.started": "2024-05-12T23:52:20.545895Z"
     }
    },
    "outputs": [],
@@ -62,7 +63,8 @@
     "from lib_henryk.config import *\n",
     "from lib_henryk.utils import *\n",
     "\n",
-    "from lib_henryk.recordings import transcription"
+    "from lib_henryk.recordings import transcription\n",
+    "from lib_henryk.recordings import recordings"
    ]
   },
   {
@@ -75,15 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "170fe65c-d43d-4157-9473-29a7a25b8d4f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-10T21:15:09.607549Z",
-     "iopub.status.busy": "2024-05-10T21:15:09.606246Z",
-     "iopub.status.idle": "2024-05-10T21:15:09.652044Z",
-     "shell.execute_reply": "2024-05-10T21:15:09.650455Z",
-     "shell.execute_reply.started": "2024-05-10T21:15:09.607511Z"
+     "iopub.execute_input": "2024-05-12T23:52:22.022536Z",
+     "iopub.status.busy": "2024-05-12T23:52:22.022092Z",
+     "iopub.status.idle": "2024-05-12T23:52:22.059127Z",
+     "shell.execute_reply": "2024-05-12T23:52:22.058559Z",
+     "shell.execute_reply.started": "2024-05-12T23:52:22.022516Z"
     }
    },
    "outputs": [],
@@ -94,7 +96,7 @@
     "\n",
     "# retrieve new token by opening 'https://webhook.site/' in incognito mode\n",
     "# and picking up the token from the URL\n",
-    "WEBHOOKS_TOKEN_ID = 'f7477993-66da-4747-b9c8-6bc5c302ef3c'\n",
+    "WEBHOOKS_TOKEN_ID = '035fb8e4-5260-4e10-9e86-5782fb3bb352'\n",
     "GOODTAPE_API_KEY = os.getenv(\"GOODTAPE_API_KEY\")"
    ]
   },
@@ -108,28 +110,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "f59bfa37-d829-44eb-930c-29d56d91c092",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-10T21:15:11.964295Z",
-     "iopub.status.busy": "2024-05-10T21:15:11.963588Z",
-     "iopub.status.idle": "2024-05-10T21:15:12.017767Z",
-     "shell.execute_reply": "2024-05-10T21:15:12.016651Z",
-     "shell.execute_reply.started": "2024-05-10T21:15:11.964260Z"
+     "iopub.execute_input": "2024-05-12T23:52:25.138089Z",
+     "iopub.status.busy": "2024-05-12T23:52:25.137741Z",
+     "iopub.status.idle": "2024-05-12T23:52:43.369620Z",
+     "shell.execute_reply": "2024-05-12T23:52:43.369123Z",
+     "shell.execute_reply.started": "2024-05-12T23:52:25.138069Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-12 23:52:25 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - retrieved 503 files\n",
+      "processing 503 audio files |██████████████████████████████████████████████████| 100.0% \n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv(FILE_AUDIO_STATS_CSV)\n",
-    "df_transcriptions = df.copy()\n",
-    "df_transcriptions['transcription_id'] = ''"
+    "# get fresh stats directly from the recordings\n",
+    "df = recordings.get_recordings_info(path_recordings=DIR_WIADOMOSCI_DO_HENRYCZKA)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "120f74ec-b408-4afb-9669-4655bc80537b",
+   "cell_type": "raw",
+   "id": "4de75f3c-6118-4ddc-bcc1-0e370fbf0211",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-05-10T21:38:16.694257Z",
@@ -139,15 +148,6 @@
      "shell.execute_reply.started": "2024-05-10T21:38:16.694231Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "transcription log exists, reading it from ../../data/processed/henryk_audio_transcription.csv\n"
-     ]
-    }
-   ],
    "source": [
     "# load sync dataframe\n",
     "if os.path.exists(FILE_TRANSCRIPTION_CSV):\n",
@@ -165,15 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "6fd0deda-025c-49b8-b4d6-d5d2cda26e1a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-10T21:38:20.727036Z",
-     "iopub.status.busy": "2024-05-10T21:38:20.725913Z",
-     "iopub.status.idle": "2024-05-10T21:38:20.790599Z",
-     "shell.execute_reply": "2024-05-10T21:38:20.789394Z",
-     "shell.execute_reply.started": "2024-05-10T21:38:20.727002Z"
+     "iopub.execute_input": "2024-05-12T23:52:46.054826Z",
+     "iopub.status.busy": "2024-05-12T23:52:46.054507Z",
+     "iopub.status.idle": "2024-05-12T23:52:59.304596Z",
+     "shell.execute_reply": "2024-05-12T23:52:59.303891Z",
+     "shell.execute_reply.started": "2024-05-12T23:52:46.054807Z"
     }
    },
    "outputs": [
@@ -181,18 +181,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "submitted 0 recordings to the transcription service GoodTape\n"
+      "processing [78]: Henryk 2024-05-05 Tatuś opowiada o festynie a Kaudipteryks przechwala się ogonem.m4a\n",
+      "processing [79]: Henryk 2024-05-06 Tatuś opowiada o rekrutacji a Megaterium to największy ssak na ziemi.m4a\n",
+      "processing [80]: Henryk 2024-05-08 Tatuś opowiada o robieniu komputera do obliczeń a Ceratopsy gonią złodzieja jaj...\n",
+      "processing [81]: Henryk 2024-05-10 Tatuś opowiada o miejscach do których pójdziemy a Ichtiozaury zmieniają zwycza...\n",
+      "processing [85]: Rodzice Henryk 2024-05-05 Nagranie z wycieczki babci i dziadka.m4a\n",
+      "submitted 5 recordings to the transcription service GoodTape\n"
      ]
     }
    ],
    "source": [
     "# perform transcriptions\n",
     "transcription.submit_transcriptions_goodtape(\n",
-    "    df=df_transcriptions, \n",
+    "    df=df, \n",
     "    webhooks_token_id=WEBHOOKS_TOKEN_ID,\n",
     "    goodtape_api_key=GOODTAPE_API_KEY,\n",
     "    path_recordings=DIR_WIADOMOSCI_DO_HENRYCZKA,\n",
-    "    start=0, stop=500,\n",
+    "    start=0, stop=510,\n",
     "    verbose=False\n",
     ")"
    ]
@@ -233,15 +238,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "176457da-a7af-4861-9f67-6cc191c21151",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-10T21:52:23.358627Z",
-     "iopub.status.busy": "2024-05-10T21:52:23.358078Z",
-     "iopub.status.idle": "2024-05-10T21:52:45.485542Z",
-     "shell.execute_reply": "2024-05-10T21:52:45.484481Z",
-     "shell.execute_reply.started": "2024-05-10T21:52:23.358597Z"
+     "iopub.execute_input": "2024-05-12T23:58:51.832569Z",
+     "iopub.status.busy": "2024-05-12T23:58:51.832030Z",
+     "iopub.status.idle": "2024-05-12T23:58:59.931358Z",
+     "shell.execute_reply": "2024-05-12T23:58:59.930652Z",
+     "shell.execute_reply.started": "2024-05-12T23:58:51.832549Z"
     }
    },
    "outputs": [
@@ -249,24 +254,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "found 0 requests to fetch\n",
-      "0 transcriptions were retrieved\n",
-      "processing 498 transcriptions |██████████████████████████████████████████████████| 100.0% done.\n",
-      "498 new transcriptions were processed, there are 498 txt and 498 doc transcriptions available\n"
+      "found 4 requests to fetch\n",
+      "retrieved transcription [0]: abef8eb5-1c43-461c-ac09-10dc35ac691b -> file [81]: Henryk 2024-05-10 Tatuś opowiada o miejscach do których pójdz...\n",
+      "retrieved transcription [1]: b575370a-df1c-43e5-8922-0ca9dad3efa4 -> file [85]: Rodzice Henryk 2024-05-05 Nagranie z wycieczki babci i dziadka.m...\n",
+      "retrieved transcription [2]: 2ff72b9b-9f61-44ba-883b-192303965060 -> file [79]: Henryk 2024-05-06 Tatuś opowiada o rekrutacji a Megaterium to n...\n",
+      "retrieved transcription [3]: b799e08c-b412-4fa2-a204-faac598c36f7 -> file [80]: Henryk 2024-05-08 Tatuś opowiada o robieniu komputera do oblicz...\n",
+      "4 transcriptions were retrieved\n",
+      "processing 503 transcriptions |██████████████████████████████████████████████████| 100.0% done.\n",
+      "4 new transcriptions were processed, there are 503 txt and 503 doc transcriptions available\n"
      ]
     }
    ],
    "source": [
     "# retrieve goodtape server responses from webhooks\n",
     "transcription.retrieve_responses_goodtape_via_webhooks(\n",
-    "    df=df_transcriptions,\n",
+    "    df=df,\n",
     "    webhooks_token_id=WEBHOOKS_TOKEN_ID, \n",
     "    path_transcriptions_json=DIR_TRANSCRIPTIONS_JSON\n",
     ")\n",
     "\n",
     "# process json to text\n",
     "transcription.process_transcriptions_json(\n",
-    "    df=df_transcriptions, \n",
+    "    df=df, \n",
     "    path_transcriptions_json=DIR_TRANSCRIPTIONS_JSON, \n",
     "    path_transcriptions_txt=DIR_TRANSCRIPTIONS_TXT,\n",
     "    path_transcriptions_doc=DIR_TRANSCRIPTIONS_DOC,\n",
@@ -314,7 +323,7 @@
    "source": [
     "# cleanup stale transcription ids - but work on a copy of the log\n",
     "df_transcriptions_to_write = transcription.get_verified_transcriptions(\n",
-    "    df=df_transcriptions, \n",
+    "    df=df, \n",
     "    path_transcriptions_json=DIR_TRANSCRIPTIONS_JSON, \n",
     "    path_transcriptions_txt=DIR_TRANSCRIPTIONS_TXT,\n",
     "    path_transcriptions_doc=DIR_TRANSCRIPTIONS_DOC,\n",
